--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/NewsFeedFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.gmail.gerbencdg.eurosporttechtest.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+        android:id="@+id/NewsFeedFragment"
+        android:name="com.gmail.gerbencdg.eurosporttechtest.newsfeed.NewsFeedFragment"
+        android:label="@string/newsfeed_fragment"
+        tools:layout="@layout/fragment_newsfeed">
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.gmail.gerbencdg.eurosporttechtest.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        android:id="@+id/StoryFragment"
+        android:name="com.gmail.gerbencdg.eurosporttechtest.story.StoryFragment"
+        android:label="@string/story_fragment"
+        tools:layout="@layout/fragment_story">
 
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
     </fragment>
 </navigation>
