--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primary">#141b4d</color>
+    <color name="primary_variant">#8c8c8c</color>
+    <color name="secondary">#FF03DAC5</color>
+    <color name="on_secondary_variant">#FF018786</color>
+    <color name="on_secondary">#FF000000</color>
+    <color name="on_primary">#FFFFFFFF</color>
+
+    <color name="background_default">#f2f2f2</color>
+    <color name="white">#FFFFFF</color>
+    <color name="light_grey">#8c8c8c</color>
+
 </resources>
