--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="list_item_padding">12dp</dimen>
+    <dimen name="activity_horizontal_margin">8dp</dimen>
+    <dimen name="news_post_margin">10dp</dimen>
+    <dimen name="margin_default">12dp</dimen>
 </resources>
