--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="activity_horizontal_margin">8dp</dimen>
     <dimen name="news_post_margin">10dp</dimen>
     <dimen name="margin_default">12dp</dimen>
+    <dimen name="appbar_height">72dp</dimen>
 </resources>
