--- a/app/src/main/res/layout/fragment_newsfeed.xml
+++ b/app/src/main/res/layout/fragment_newsfeed.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -11,17 +11,18 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:background="@color/background_default"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/background_default">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:padding="8dp"
             android:id="@+id/newsfeed_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
+            android:padding="8dp"
+            android:clipToPadding="false"
+            app:items="@{viewModel.posts}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/newsfeedpost_item"/>
+            tools:listitem="@layout/newsfeedpost_item" />
     </LinearLayout>
 
 
