--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="background_default">#f2f2f2</color>
     <color name="white">#FFFFFF</color>
     <color name="light_grey">#8c8c8c</color>
+    <color name="black">#000000</color>
 
 </resources>
