--- a/app/src/main/res/layout/fragment_videoplayer.xml
+++ b/app/src/main/res/layout/fragment_videoplayer.xml
@@ -1,54 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="match_parent"
-    android:background="@color/black"
     android:layout_height="match_parent"
+    android:background="@color/black"
     android:keepScreenOn="true">
 
 
-    <androidx.media3.ui.PlayerView android:id="@+id/player_view"
+    <androidx.media3.ui.PlayerView
+        android:id="@+id/player_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:show_shuffle_button="true"
-        app:show_subtitle_button="true"/>
+        app:show_subtitle_button="true" />
 
     <ImageView
         android:id="@+id/back_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/back_to_news_feed"
         android:padding="16dp"
-        android:src="@drawable/back"
-        android:contentDescription="@string/back_to_news_feed" />
+        android:src="@drawable/back" />
 
 
 </FrameLayout>
-
-<!--<FrameLayout-->
-<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    android:id="@+id/video_layout"-->
-<!--    android:layout_width="fill_parent"-->
-<!--    android:layout_height="200dp"-->
-<!--    android:background="@android:color/black">-->
-<!--    -->
-<!--    -->
-<!--&lt;!&ndash;    <com.universalvideoview.UniversalVideoView&ndash;&gt;-->
-<!--&lt;!&ndash;        android:id="@+id/video_view"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_width="fill_parent"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_height="fill_parent"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_gravity="center"&ndash;&gt;-->
-<!--&lt;!&ndash;        app:uvv_autoRotation="true"&ndash;&gt;-->
-<!--&lt;!&ndash;        app:uvv_fitXY="false" />&ndash;&gt;-->
-
-<!--&lt;!&ndash;    <com.universalvideoview.UniversalMediaController&ndash;&gt;-->
-<!--&lt;!&ndash;        android:id="@+id/media_controller"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_width="fill_parent"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_height="fill_parent"&ndash;&gt;-->
-<!--&lt;!&ndash;        app:uvv_scalable="true" />&ndash;&gt;-->
-
-<!--</FrameLayout>-->
