--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,12 +11,37 @@
         <item name="colorOnSecondary">@color/on_secondary</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >@color/primary</item>
-        <!-- Customize your theme here. -->
+
+        <item name="textAppearanceHeadline6">@style/Theme.EurosportTechTest.Headline6</item>
+        <item name="textAppearanceSubtitle1">@style/Theme.EurosportTechTest.Subtitle</item>
+        <item name="textAppearanceOverline">@style/Theme.EurosportTechTest.Overline</item>
+        <item name="textAppearanceBody2">@style/Theme.EurosportTechTest.Body2</item>
     </style>
 
     <style name="Theme.EurosportTechTest.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.EurosportTechTest.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Theme.EurosportTechTest.Subtitle" parent="TextAppearance.MaterialComponents.Subtitle1">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/light_grey</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="Theme.EurosportTechTest.Body2" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="Theme.EurosportTechTest.Overline" parent="TextAppearance.MaterialComponents.Overline">
+        <item name="android:textSize">15sp</item>
+        <item name="android:letterSpacing">0</item>
     </style>
 
     <style name="Theme.EurosportTechTest.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
