--- a/app/src/main/res/layout/newsfeedpost_item.xml
+++ b/app/src/main/res/layout/newsfeedpost_item.xml
@@ -41,7 +41,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="@{() -> viewModel.onPostClick(post)}">
+                android:onClick="@{() -> viewModel.onNewsPostClick(post)}">
 
 
                 <ImageView
